--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "~2.2.6",
+    "bluebird": "~2.10.2",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "kue": "~0.9.5",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-    "aws-sdk": "*",
-    "redis": "*",
-    "kue": "*",
-    "node-uuid": "*",
-    "bluebird": "*",
-    "opencv": "*"
+    "node-uuid": "~1.4.3",
+    "opencv": "~3.2",
+    "redis": "~2.1.0",
+    "request": "~2.64",
+    "serve-favicon": "~2.3.0"
   }
 }
