--- a/package.json
+++ b/package.json
@@ -7,18 +7,22 @@
   },
   "dependencies": {
     "aws-sdk": "~2.2.6",
+    "bl": "^1.0.0",
     "bluebird": "~2.10.2",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "extend": "^3.0.0",
+    "json-stringify-safe": "^5.0.1",
     "kue": "~0.9.5",
     "morgan": "~1.6.1",
     "node-uuid": "~1.4.3",
     "opencv": "~3.2",
     "redis": "~2.1.0",
-    "request": "~2.64",
-    "serve-favicon": "~2.3.0"
+    "request": "^2.64.0",
+    "serve-favicon": "~2.3.0",
+    "tough-cookie": "^2.1.0"
   }
 }
