--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bl": "^1.0.0",
     "bluebird": "~2.10.2",
     "body-parser": "~1.13.2",
+    "config": "^1.16.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
