--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "extend": "^3.0.0",
+    "haikunator": "^1.0.1",
     "json-stringify-safe": "^5.0.1",
     "kue": "~0.9.5",
     "morgan": "~1.6.1",
