--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "request": "^2.64.0",
     "serve-favicon": "~2.3.0",
     "tough-cookie": "^2.1.0",
-    "ec2-instance-data": "^0.4.1"
+    "ec2-instance-data": "^0.4.1",
+    "poisson-process": "^0.2.1"
   }
 }
